changes for user contract

--- a/totalhr.web/areas/Admin/Views/Account/Login.cshtml
+++ b/totalhr.web/areas/Admin/Views/Account/Login.cshtml
@@ -57,7 +57,7 @@
   <!-- BEGIN LOGIN -->
   <div id="login">
     <!-- BEGIN LOGIN FORM -->
-    <form id="loginform" class="form-vertical no-padding no-margin" action="/Admin/Account/LoginAdminUser/">
+    <form id="loginform" class="form-vertical no-padding no-margin" method="post" action="/Admin/Account/LoginAdminUser/">
       <div class="lock">
           <i class="icon-lock"></i>
       </div>
