--- a/totalhr.web/areas/Admin/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/areas/Admin/Views/Shared/_SideBarMenu.cshtml
@@ -129,5 +129,5 @@
         </ul>
     </li> 
 
-    <li><a class="" href="/Admin/Account/Loggout"><span class="icon-box"><i class="icon-user"></i></span> @AdminGeneric.V_Loggout</a></li>
+    <li><a class="" href="/Account/Logout"><span class="icon-box"><i class="icon-user"></i></span> @AdminGeneric.V_Loggout</a></li>
 </ul>
