--- a/totalhr.web/areas/Admin/Views/Contract/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/Contract/Index.cshtml
@@ -1,31 +1,47 @@
 ﻿@using totalhr.Resources;
+@using totalhr.web.Areas.Admin.Helpers;
+@using totalhr.web.Areas.Admin.Models;
 
 @{
-    ViewBag.Title = AdminGeneric.V_Contract_Management;    
+    ViewBag.Title = AdminGeneric.V_Contract_Management;
+    
+    var breadCrumbItems = new List<BreadCrumbItem>
+    {
+        new BreadCrumbItem{Url = "", Text = AdminGeneric.V_Contract_Management, Title= AdminGeneric.V_Contract_Management}
+    };   
 }
 
-<div class="container">
+@section pagetitle{
+   @AdminGeneric.V_Contract_Management
+}
+
 @section breadcrumb{
-            <a href="/Admin/" title="@AdminGeneric.V_Home">@AdminGeneric.V_Home</a> &gt;
-            <span class="last">@AdminGeneric.V_Contract_Management</span>
-        }
+    @Html.Raw(GenericHelper.MakeBreadCrumb(breadCrumbItems))
+}
 
-<h1>@AdminGeneric.V_Contract_Management</h1>
 
-<div class="wide">
-    <p>
-        @AdminGeneric.V_Choose_Option
-    </p>
-    <p>
-        <a href="/Admin/Contract/Manage/" title="@Contract.V_Contract_Management_SelUser">
-            @Contract.V_Contract_Management_SelUser
-        </a>
-    </p>
-    <p>
-        <a href="/Admin/Contract/Template/" title="@AdminGeneric.V_Manage_Templates">
-            @AdminGeneric.V_Manage_Templates
-        </a>
-    </p>
+<div class="row-fluid">
+     <div class="widget">
+        <div class="widget-title">
+            <h4><i class="icon-reorder"></i>@AdminGeneric.V_Choose_Option</h4>
+            <span class="tools">
+                <a href="javascript:;" class="icon-chevron-down"></a>
+            </span>
+        </div>
+        <div class="widget-body"> 
+            <br />
+            <p>
+                <a href="/Admin/Contract/Manage/" title="@Contract.V_Contract_Management_SelUser">
+                    @Contract.V_Contract_Management_SelUser
+                </a>
+            </p>
+            <p>
+                <a href="/Admin/Contract/Template/" title="@AdminGeneric.V_Manage_Templates">
+                    @AdminGeneric.V_Manage_Templates
+                </a>
+            </p>
+            <br />
+        </div>
+    </div>
 </div>
 
-</div>
