--- a/totalhr.web/areas/Admin/Views/Shared/_MyProfilePreview.cshtml
+++ b/totalhr.web/areas/Admin/Views/Shared/_MyProfilePreview.cshtml
@@ -1,7 +1,11 @@
-﻿<li class="dropdown">
+﻿@{
+    var currentUser = ViewBag.CurrentUser as Authentication.Models.ClientUser;    
+}
+
+<li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         <img src="/Content/img/avatar1_small.jpg" alt="">
-        <span class="username">Mosaddek Hossain</span>
+        <span class="username">@(currentUser != null? currentUser.FullName : "")</span>
         <b class="caret"></b>
     </a>
     <ul class="dropdown-menu">
@@ -9,6 +13,6 @@
         <li><a href="#"><i class="icon-tasks"></i> My Tasks</a></li>
         <li><a href="#"><i class="icon-calendar"></i> Calendar</a></li>
         <li class="divider"></li>
-        <li><a href="/Admin/Account/Loggout/"><i class="icon-key"></i> Log Out</a></li>
+        <li><a href="/Account/Logout/"><i class="icon-key"></i> Log Out</a></li>
     </ul>
 </li>
