--- a/totalhr.web/areas/Admin/Views/FormEditor/CreateForm.cshtml
+++ b/totalhr.web/areas/Admin/Views/FormEditor/CreateForm.cshtml
@@ -3,8 +3,8 @@
 @model totalhr.Shared.Models.FormInfo
 
 @{
-    Layout = "~/Views/Shared/_PopupLayout.cshtml";    
-    ViewBag.Title = "Form Editor";
+    Layout = "~/Views/Shared/_PopupLayout.cshtml";
+    ViewBag.Title = FormGenerator.V_Form_Editor;
     var schema = string.IsNullOrEmpty(Model.Schema) ? "''" : Model.Schema;
 }
 
@@ -62,9 +62,6 @@
 
                 };
 
-                //$scope.SubmitFormInput = function () {
-                //    alert(JSON.stringify($scope.myForm.data));
-                //};
               
             });
 
@@ -96,7 +93,9 @@
         </script>       
 }
 
-@section head2{"Form Editor - Create form"}      
+@section head2{
+    <h1>@FormGenerator.V_Form_Create_New</h1>
+}      
        
        
         <div ng-controller="MyController" class="container">
@@ -106,10 +105,10 @@
             </p>
 
             <p>
-                Form Name: <input type="text" id="Name" name="Name" />
+                @FormGenerator.V_Form_Name: <input type="text" id="Name" name="Name" />
             </p>
             <div class="alert alert-danger" ng-if="errorMessage != ''" role="alert">
-                <strong>Error could not save form!</strong>
+                <strong>@FormGenerator.Error_Could_Not_Save_Data</strong>
                 <br />
                 <span ng-bind="errorMessage"></span>
             </div>
