Fix for the Form fields save functions.

--- a/totalhr.web/Views/Shared/_SideBarMenu.cshtml
+++ b/totalhr.web/Views/Shared/_SideBarMenu.cshtml
@@ -118,6 +118,19 @@
         </ul>
     </li>    
    
+     <li class="has-sub">
+        <a href="javascript:;" class="">
+            <span class="icon-box"><i class="icon-map-marker"></i></span> Company
+            <span class="arrow"></span>
+        </a>
+        <ul class="sub">
+            <li><a class="" href="maps_google.html"> Structure</a></li>
+            <li><a class="" href="maps_vector.html"> Image Gallery</a></li>
+        </ul>
+     </li> 
+    
+  
+
     <li class="has-sub">
         <a href="javascript:;" class="">
             <span class="icon-box"><i class="icon-map-marker"></i></span> @AdminGeneric.V_Time_Recording
