--- a/totalhr.web/areas/Admin/Views/FormEditor/CreateForm.cshtml
+++ b/totalhr.web/areas/Admin/Views/FormEditor/CreateForm.cshtml
@@ -90,7 +90,7 @@
 
                         $http({
                             method: 'POST',
-                            url: "/Admin/FormEditor/CreateForm",
+                            url: "/Admin/FormEditor/SaveForm",
                             data: data,
                             async: false,
                             dataType: "json"
@@ -144,4 +144,7 @@
 
         </div>
        
-   
+    @section footer{
+           
+                
+       }
