--- a/totalhr.web/areas/Admin/Views/FormEditor/Index.cshtml
+++ b/totalhr.web/areas/Admin/Views/FormEditor/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using G = totalhr.web.Helpers;
+﻿@using totalhr.Shared
+@using G = totalhr.web.Helpers;
 @using totalhr.Resources;
 @using totalhr.web.Areas.Admin.Helpers;
 @using totalhr.web.Areas.Admin.Models;
@@ -41,48 +42,51 @@
    
     @if (allForms.Count > 0)
     {
-    <div class="widget">
-        <div class="widget-title">
-            <h4><i class="icon-reorder"></i>@FormGenerator.V_Form_List</h4>
-            <span class="tools">
-                <a href="javascript:;" class="icon-chevron-down"></a>
-                <a href="javascript:;" class="icon-remove"></a>
-            </span>
-        </div>
-        <div class="widget-body">            
-            <table class="table table-striped table-bordered" id="sample_1">
-                <thead>     
-                    <tr>
-                        @Html.Raw(G.GenericHelper.MakeSortableTH("FormId", "th", searchInfo.OrderColumn, searchInfo.OrderDirection,FormGenerator.V_Form_Id))
-           
-                        @Html.Raw(G.GenericHelper.MakeSortableTH("FormName", "th", searchInfo.OrderColumn, searchInfo.OrderDirection,FormGenerator.V_Form_Name))
-                  
-                        <th>&nbsp;</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var form in allForms)
-                    {
+        <div class="widget">
+            <div class="widget-title">
+                <h4><i class="icon-reorder"></i>@FormGenerator.V_Form_List</h4>
+                <span class="tools">
+                    <a href="javascript:;" class="icon-chevron-down"></a>
+                    <a href="javascript:;" class="icon-remove"></a>
+                </span>
+            </div>
+            <div class="widget-body">            
+                <table class="table table-striped table-bordered" id="sample_1">
+                    <thead>     
                         <tr>
-                            <td>
-                                @form.Id
-                            </td>
-                            <td>
-                                @form.Name
-                            </td>
-               
-                            <td>
-                                <button class="btn btn-primary" onclick="OpenPopup('/Admin/FormEditor/EditForm/@form.Id', 1000, 700);">
-                                    <i class="icon-pencil icon-white"></i> @AdminGeneric.V_More_Details
-                                </button>                                
-                            </td>
-                        </tr>  
+                            @Html.Raw(G.GenericHelper.MakeSortableTH("FormId", "th", searchInfo.OrderColumn, searchInfo.OrderDirection,FormGenerator.V_Form_Id))
            
-                    }
-                </tbody>
-            </table>
+                            @Html.Raw(G.GenericHelper.MakeSortableTH("FormName", "th", searchInfo.OrderColumn, searchInfo.OrderDirection,FormGenerator.V_Form_Name))
+                  
+                            @Html.Raw(G.GenericHelper.MakeSortableTH("FormStatus", "th", searchInfo.OrderColumn, searchInfo.OrderDirection,FormGenerator.V_Form_Status))
+                            <th>&nbsp;</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var form in allForms)
+                        {
+                            <tr>
+                                <td>
+                                    @form.Id
+                                </td>
+                                <td>
+                                    @form.Name
+                                </td>
+                                <td>
+                                    @EnumExtensions.Description(form.StatusId)
+                                </td>
+                                <td>
+                                    <button class="btn btn-primary" onclick="OpenPopup('/Admin/FormEditor/EditForm/@form.Id', 1000, 700);">
+                                        <i class="icon-pencil icon-white"></i> @AdminGeneric.V_More_Details
+                                    </button>                                
+                                </td>
+                            </tr>  
+           
+                        }
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
     }else{
         <p class="error">
             @AdminGeneric.V_No_FormFound
@@ -90,11 +94,13 @@
     }
 
 
-    <div class="row-fluid">
-         <button class="btn btn-warning" onclick="OpenPopup('/Admin/FormEditor/CreateForm/1', 1000, 700);">
-            <i class="icon-plus icon-white"></i> @Contract.V_Create_Form
-        </button>
-        
-    </div>
+    
 </div>
 
+<div class="row-fluid">
+    <p>
+        <button class="btn btn-warning" onclick="OpenPopup('/Admin/FormEditor/CreateForm/1', 1000, 700);">
+            <i class="icon-plus icon-white"></i> @Contract.V_Create_Form
+        </button>
+    </p>
+</div>
